[package]
name = "argos"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.1"
authors = ["Liudao <jimmyseraph@testops.vip>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jimmyseraph/argos"
homepage = "https://github.com/jimmyseraph/argos"
description = """
Argos makes it easy to create a stand-alone web application backend server.
"""
categories = ["web-programming"]
keywords = ["web", "HTTP", "framework"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
lazy_static = "1.4.0" 
http-body-util = "0.1.0-rc.3"
bytes = "1.4.0"
futures-util = "0.3.28"
pin-project-lite = "0.2.4"
regex = "1.9.5"
boring = "3.0.4"
tokio-boring = "3.0.4"

[dev-dependencies]
argos = { path = "../core" }
argos-macros = { path = "../macros" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[[example]]
name = "hello"

[[example]]
name = "filter"

[[example]]
name = "h2"