[package]
name = "argos-macros"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.1"
authors = ["Liudao <jimmyseraph@testops.vip>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jimmyseraph/argos"
homepage = "https://github.com/jimmyseraph/argos"
description = """
Argos's proc macros.
"""
categories = ["web-programming"]
keywords = ["web", "HTTP", "framework"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.29" , features = [
    "full",
    "parsing",
    "extra-traits",
    "visit",
    "visit-mut",
] }

